[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stegassimilator"
description = "Advanced Steganography Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["steganography", "image-analysis", "forensics", "security"]
authors = [
    {name = "StegAssimilator Team", email = "support@stegassimilator.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=8.3.1",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "scipy>=1.7.1",
    "opencv-python>=4.5.3.56",
    "scikit-image>=0.18.2",
    "pandas>=1.3.3",
    "tqdm>=4.62.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/stegassimilator"
Documentation = "https://stegassimilator.readthedocs.io/"
Repository = "https://github.com/yourusername/stegassimilator.git"
Issues = "https://github.com/yourusername/stegassimilator/issues"

[project.scripts]
stegassimilator = "stegassimilator.cli:main"

[tool.setuptools]
packages = ["stegassimilator"]

[tool.setuptools_scm]
write_to = "stegassimilator/_version.py"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["stegassimilator"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "docs/*",
    "setup.py",
    "conftest.py",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] 